--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="플래시카드로 효율적으로 학습하세요. 과학적으로 검증된 간격 반복 기억법." />
+    <meta name="theme-color" content="#ffffff" />
     <title>Study Cards</title>
   </head>
   <body>
