Feat: 다크모드 지원 추가
사용자가 라이트 모드, 다크 모드, 시스템 설정 중 선택할 수 있는 테마 기능을 추가합니다. ThemeProvider를 통해 전역 테마 상태를 관리하고, 다크모드에 맞는 색상 스타일을 적용합니다. FOUC(Flash of Unstyled Content) 방지를 위해 index.html에 초기 테마 로드 스크립트를 추가했습니다.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="플래시카드로 효율적으로 학습하세요. 과학적으로 검증된 간격 반복 기억법." />
     <meta name="theme-color" content="#ffffff" />
+    <script>
+      (function () {
+        try {
+          const savedTheme = localStorage.getItem('theme')
+          const shouldUseDark = savedTheme === 'dark'
+            ? true
+            : savedTheme === 'light'
+              ? false
+              : window.matchMedia('(prefers-color-scheme: dark)').matches
+          document.documentElement.classList.toggle('dark', shouldUseDark)
+        } catch (_) {
+          // no-op
+        }
+      })()
+    </script>
     <title>Study Cards</title>
   </head>
   <body>
